--- a/src/app/components/description/description.component.html
+++ b/src/app/components/description/description.component.html
@@ -2,17 +2,17 @@
   <div class="description">
     <div>
       <div>
-        <img [src]="burgerData?.image" [alt]="burgerData?.name">
+        <img [src]="burgerData?.pathImage" [alt]="burgerData?.name">
       </div>
       <div class="text">
         <h2>{{ burgerData?.name }}</h2>
-        <p class="ingredients">{{ burgerData?.ingredients }}</p>
+        <p class="ingredients">{{ burgerData?.baseDescription }}</p>
         <p class="price">R$ {{burgerData?.price}}</p>
       </div>
     </div>
     <div class="details">
       <h3>Descrição</h3>
-      <p>{{ burgerData?.description }}</p>
+      <p>{{ burgerData?.fullDescription }}</p>
     </div>
   </div>
   <div>
