--- a/src/app/views/category/category.component.html
+++ b/src/app/views/category/category.component.html
@@ -3,7 +3,7 @@
     <h1>{{ category?.name }}</h1>
   </div>
   <div class="card">
-    <app-card *ngFor="let burger of displayedBurgers" [categoryData]="burger"
+    <app-card *ngFor="let burger of displayedBurgers" [burgerData]="burger"
       [routerLink]="['/burgers', burger.id]"></app-card>
   </div>
   <div>
@@ -12,7 +12,7 @@
   </div>
 
   <div class="card" *ngIf="showAll">
-    <app-card *ngFor="let burger of remainingBurgers" [categoryData]="burger"
+    <app-card *ngFor="let burger of remainingBurgers" [burgerData]="burger"
       [routerLink]="['/burgers', burger.id]"></app-card>
   </div>
   <div>
